--- a/arch/arm/boot/dts/zynq-ypacket2.dts
+++ b/arch/arm/boot/dts/zynq-ypacket2.dts
@@ -102,10 +102,19 @@
     yemacl@44000000 {
 	    compatible = "yemacl";
 	    status = "okay";
-	    reg = < 0x43C00000 0x10000 0x44000000 0x10000 0x45000000 0x20000>;
+	    reg = <0x44000000 0x10000 0x45000000 0x20000>;
         local-mac-address = [88 77 66 55 44 33];
 		interrupt-parent = <&intc>;
 		interrupts = <0 29 1>; 
+    };
+
+    yemacl@60000000 {
+	    compatible = "yemacl";
+	    status = "okay";
+	    reg = <0x60000000 0x10000 0x50000000 0x20000>;
+        local-mac-address = [88 77 66 55 44 34];
+		interrupt-parent = <&intc>;
+		interrupts = <0 32 1>; 
     };
 
     temac@47000000 {
