--- a/arch/arm/configs/ypacket2_zynq_defconfig
+++ b/arch/arm/configs/ypacket2_zynq_defconfig
@@ -1668,7 +1668,7 @@ CONFIG_I2C_CADENCE=y
 # CONFIG_I2C_RK3X is not set
 # CONFIG_I2C_SIMTEC is not set
 # CONFIG_I2C_VERSATILE is not set
-# CONFIG_I2C_XILINX is not set
+CONFIG_I2C_XILINX=y
 
 #
 # External I2C/SMBus adapter drivers
