--- a/arch/arm/boot/dts/zynq-ypacket2.dts
+++ b/arch/arm/boot/dts/zynq-ypacket2.dts
@@ -108,7 +108,14 @@
 		interrupts = <0 29 1>; 
     };
 
-
+    rfd@43c20000 {
+        compatible = "rfd";
+        status = "okay";
+        reg = <0x43c20000 0x40000>;
+ 		interrupt-parent = <&intc>;
+		interrupts = <0 30 1 >,  <0 31 1 >; 
+       
+    };
 
     temac@47000000 {
 	    compatible = "temac";
