--- a/arch/arm/boot/dts/zynq-ypacket2.dts
+++ b/arch/arm/boot/dts/zynq-ypacket2.dts
@@ -102,7 +102,7 @@
     yemacl@44000000 {
 	    compatible = "yemacl";
 	    status = "okay";
-	    reg = <0x44000000 0x10000 0x45000000 0x20000>;
+	    reg = <0x43c10000 0x10000 0x44000000 0x10000 0x45000000 0x20000>;
 
 		interrupt-parent = <&intc>;
 		interrupts = <0 29 1>; 
