--- a/arch/arm/configs/ypacket2_zynq_defconfig
+++ b/arch/arm/configs/ypacket2_zynq_defconfig
@@ -1992,16 +1992,16 @@ CONFIG_CPU_THERMAL=y
 # CONFIG_IMX_THERMAL is not set
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_CORE=y
-CONFIG_WATCHDOG_NOWAYOUT=y
+# CONFIG_WATCHDOG_NOWAYOUT is not set
 
 #
 # Watchdog Device Drivers
 #
 # CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
-CONFIG_XILINX_WATCHDOG=y
+CONFIG_XILINX_WATCHDOG=m
 # CONFIG_ARM_SP805_WATCHDOG is not set
-CONFIG_CADENCE_WATCHDOG=y
+# CONFIG_CADENCE_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
 # CONFIG_ALIM7101_WDT is not set
